@@ -1,3 +1,11 @@
+2012-11-10         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawkapi.c (api_add_ext_func, api_awk_atexit, api_clear_array,
+	api_create_array, api_create_value, api_register_ext_version,
+	api_release_value, api_update_ERRNO_string, node_to_awk_value,
+	remove_element, run_ext_exit_handlers): Add null pointer checks.
+	Everywhere: Add / fixup leading comments.
+
 2012-11-04         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkapi.h: Minor documentation edit.
